safari result background image  z-index fix

--- a/app/javascript/snap/styles/components/_search-results.scss
+++ b/app/javascript/snap/styles/components/_search-results.scss
@@ -12,7 +12,8 @@
             position: relative;
             height: auto !important;
             overflow: hidden;
-            z-index: 2;
+            background-color: #fff;
+            z-index: 100;
         }
 
         .card-img-container {
